# blogdevleo

./: .env  .gitignore  .htaccess  Cargo.toml  Dockerfile  README.md  Trunk.toml  composer.json  index.html  index.php  server.php
blogdevleo/: Login.yml  opencollection.yml
config/: Database.php
content/: Meu primeiro dia como estagio em TI.md  about.md  construindo-pelo-primeiro-blog-3-vezes.md  contacts.md  entendendo-sobre-bits-e-bytes.md  falando-sobre-crc.md
controller/: Auth.php  Blogs.php
db/Repository/: User.php
db/crud/: User.php
db/migrations/: 20260401204241_create_table_user.php  20260423222307_alter_table_user.php
dto/: Login.php
service/: AuthServer.php  BlogsService.php
src/: main.rs
src/Controller/: Auth.php  Blogs.php  BlogsAdmin.php
src/Core/: Controller.php  Helpers.php  Router.php  Session.php
src/Core/Middlewares/: AuthMiddleware.php  (+2 more)
src/Dto/: BlogInput.php  Login.php
src/Model/: Blog.php  User.php
src/Models/: BlogInput.php  User.php
src/Service/: Auth.php  AuthServer.php  BlogsAdminService.php  BlogsService.php
src/components/: app.rs  blog_view.rs  body_main.rs  header.rs  mod.rs
src/scripts/: new_blog  new_blog.c  new_blog.sh
src/service/: format_html.rs  get_blogs.rs  input_css.rs  mod.rs
src/ssr/: app_handler.rs  blog_hendler.rs  mod.rs
src/structs/: blog_data.rs  mod.rs  req_name_blog.rs
view/: error.php  home.php  login.php  main.php  new_blog.php  view_blog.php
view/components/: error.php  footer.php  forbidden.php  header.php  home.php  login.php  new_blog.php  not_authenticated.php  view_blog.php
(+1 files in other folders)
