[package]
name = "blogdevleo"
version = "0.1.0"
edition = "2024"


[dependencies]
yew = { version = "0.21.0", features = ["ssr", "csr"] }
chrono = "0.4.42"
dotenv = "0.15.0"
tracing = "0.1.41"
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
yew-router = "0.18.0"
serde = "1.0.228"
pulldown-cmark = "0.13.0"
askama = "0.14.0"
tracing-subscriber = "0.3.20"
linked-hash-map = "0.5.6"
web-sys = "0.3.82"
